# thesis-rewrite-desktop

./: AGENTS.md  LICENSE.txt  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
