[package]
name = "thesis-rewriter"
version = "0.1.0"
description = "Offline AI thesis rewriting desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "thesis_rewriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "thesis-rewriter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-opener = "2.5.0"

tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
llama-cpp-2 = "0.1.146"
encoding_rs = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
